--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,16 @@
 
 /* Create a custom css classes */
 
+@layer components {
+
+    .infoText{
+        @apply p-4 border-l bg-gray-700 rounded-lg max-w-[300px]
+    }
+
+    .chatRow{
+        @apply rounded-lg px-5 py-3 text-sm flex 
+        items-center justify-center space-x-2 hover:bg-gray-700/70
+    }
+
+
+}
